# DiscordBot

./: .env.example  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject copy.toml  pyproject.toml
.github/workflows/: build.yaml
src/: main.py  main_update.py
src/RePDFConv/: main.py
src/rePdf/: main.py
