[tool.poetry]
name = "awesome"
version = "0.0.1-beta.6"
description = "Awesome is discord bot packed with various functions."
authors = ["CaffeinePower <cffnpwr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120
extend-ignore = "W234"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"] 